<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/base"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/main_progress"
            android:layout_alignParentTop="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/upload_bg"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/main_upload_id_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/left_space"
                android:text="@string/main_upload_id_label"
                android:textSize="@dimen/font_size"
                tools:ignore="SpUsage" />

            <EditText
                android:id="@+id/main_upload_id"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginStart="@dimen/inner_space"
                android:paddingStart="@dimen/inner_space"
                android:paddingEnd="@dimen/inner_space"
                android:layout_toEndOf="@+id/main_progress_task_count_label"
                android:layout_alignEnd="@+id/main_progress_info"
                android:background="@drawable/bg_stoke"
                android:scrollbars="vertical"
                android:maxLines="2"
                android:textSize="@dimen/font_size_small"
                android:text=""
                tools:ignore="RtlSymmetry,SpUsage" />

            <TextView
                android:id="@+id/main_progress_task_count_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/inner_space"
                android:layout_marginStart="@dimen/left_space"
                android:layout_below="@+id/main_upload_id"
                android:text="@string/main_progress_task_total"
                android:textSize="@dimen/font_size"
                tools:ignore="SpUsage" />

            <TextView
                android:id="@+id/main_progress_task_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/main_progress_task_count_label"
                android:layout_toEndOf="@+id/main_progress_task_count_label"
                android:textSize="@dimen/font_size"
                android:text="0"
                tools:ignore="SpUsage" />

            <TextView
                android:id="@+id/main_progress_task_executed_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/left_space"
                android:layout_alignBaseline="@+id/main_progress_task_count_label"
                android:layout_toEndOf="@+id/main_progress_task_count"
                android:text="@string/main_progress_task_executed"
                android:textSize="@dimen/font_size"
                tools:ignore="SpUsage" />

            <TextView
                android:id="@+id/main_progress_task_executed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/main_progress_task_count_label"
                android:layout_toEndOf="@+id/main_progress_task_executed_label"
                android:textSize="@dimen/font_size"
                android:text="0"
                tools:ignore="SpUsage" />

            <TextView
                android:id="@+id/main_current_task_progress_label"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_marginTop="@dimen/inner_space"
                android:layout_marginStart="@dimen/left_space"
                android:layout_below="@+id/main_progress_task_count_label"
                android:text="@string/main_upload_current_task_progress_label"
                android:textSize="@dimen/font_size"
                tools:ignore="SpUsage" />

            <com.google.android.material.progressindicator.LinearProgressIndicator
                android:id="@+id/main_current_task_progress"
                android:layout_width="200dp"
                android:layout_height="25dp"
                android:layout_marginTop="@dimen/inner_space"
                android:layout_marginStart="@dimen/inner_space"
                android:paddingTop="12dp"
                android:layout_below="@+id/main_progress_task_count_label"
                android:layout_toEndOf="@+id/main_current_task_progress_label"
                android:layout_alignEnd="@+id/main_progress_info"
                android:scrollbars="vertical"
                android:textSize="@dimen/font_size_small"
                android:text=""
                tools:ignore="SpUsage" />

            <TextView
                android:id="@+id/main_progress_info"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_below="@+id/main_current_task_progress_label"
                android:layout_marginStart="@dimen/left_space"
                android:layout_marginTop="@dimen/inner_space"
                android:layout_marginEnd="@dimen/right_space"
                android:layout_marginBottom="50dp"
                android:layout_alignParentBottom="true"
                android:background="@drawable/bg_stoke"
                android:paddingStart="@dimen/inner_space"
                android:paddingTop="@dimen/inner_space"
                android:paddingEnd="@dimen/inner_space"
                android:paddingBottom="@dimen/inner_space"
                android:scrollbars="vertical"
                android:text=""
                android:textSize="@dimen/font_size_small"
                tools:ignore="SpUsage" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/upload_bg"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="@dimen/bottom_space"
            android:layout_alignParentBottom="true">
            <Button
                android:id="@+id/upload_btn"
                android:layout_marginStart="@dimen/left_space"
                android:layout_marginEnd="@dimen/right_space"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/upload_label"
                />
        </LinearLayout>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>